--- a/project-4-12/index.html
+++ b/project-4-12/index.html
@@ -103,12 +103,6 @@
       <div id="discography">
         <div id="discography-text">DISCOGRAPHY</div>
 
-        <div class="category-container">
-          <div class="category-item">Time</div>
-          <div class="category-item">Dance</div>
-          <div class="category-item">Energy</div>  
-        </div>
-
         <div class="circle-container">
           <!-- <div id="column-a"></div> -->
 
@@ -215,7 +209,19 @@
         </div>
 
         <div id="visualized">
-          <a href="./project-4-10-macro/index.html">See it visualized here...</a>
+          See it visualized here...</a>
+        </div>
+        <div class="category-container">
+          <div class="category-item">
+            <a href="./project-4-10-macro/index.html">Dance</a>
+          </div>
+          <div class="category-item">
+            <a href="./project-4-10-macro-energy/index.html">Energy</a>
+          </div> 
+          <div class="category-item">
+            <a href="./project-4-10-macro-happiness/">Happiness</a>
+          </div>
+ 
         </div>
 
       </div>
