--- a/project-4-12/index.html
+++ b/project-4-12/index.html
@@ -221,6 +221,12 @@
           <div class="category-item">
             <a href="./project-4-10-macro-happiness/">Happiness</a>
           </div>
+          <div class="category-item">
+            <a href="./project-4-8/index.html">All Tracks</a>
+          </div>
+          <div class="category-item">
+            <a href="./project-4-11-home/index.html">Discography</a>
+          </div>
  
         </div>
 
