--- a/project-4-12/index.html
+++ b/project-4-12/index.html
@@ -89,7 +89,7 @@
             <div id="artist-pick">
               <img id="artist-pick-2" src="./images/all.gif" alt="">
               <div id="remaster">Michael Jackson:<br>
-                2022 Remaster Greatest Hits 
+                2022 Remastered Greatest Hits 
               </div>
             </div>
           </div>
