--- a/project-4-12/index.html
+++ b/project-4-12/index.html
@@ -213,7 +213,7 @@
         </div>
         <div class="category-container">
           <div class="category-item">
-            <a href="./project-4-10-macro/index.html">Dance</a>
+            <a href="./project-4-10-macro/index.html">Danceability</a>
           </div>
           <div class="category-item">
             <a href="./project-4-10-macro-energy/index.html">Energy</a>
@@ -225,7 +225,7 @@
             <a href="./project-4-8/index.html">All Tracks</a>
           </div>
           <div class="category-item">
-            <a href="./project-4-11-home/index.html">Discography</a>
+            <a href="./project-4-11-home/index.html">Compilation</a>
           </div>
  
         </div>
