--- a/project-4-12/index.html
+++ b/project-4-12/index.html
@@ -18,7 +18,10 @@
     
   <div class="header">
     <div id="header-text">
-      <p id="header-text-verified">Verified Artist</p>
+      <div id="verified-row">
+        <img id="verified-image" src="images/verified.png">
+        <p id="header-text-verified">Verified Artist</p>
+      </div>
       <h1>Michael Jackson</h1>
       <p id="header-text-listener">35,769,851 monthly listeners</p>
     </div>
