--- a/project-1-10-3/index.html
+++ b/project-1-10-3/index.html
@@ -80,6 +80,6 @@
 
         </div>
         
-        <script src="./js/script-2.js" async defer></script>
+        <script src="./js/script.js" async defer></script>
     </body>
 </html>
